First pass at creating game objects
